--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,13 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.commons-lang-2.6.jar=web\\UCanAccess-3.0.1-bin\\lib\\commons-lang-2.6.jar
 file.reference.commons-lang-2.6.jar-1=web\\UCanAccess-3.0.1-bin\\commons-lang-2.6.jar
-file.reference.commons-logging-1.1.1.jar=web\\UCanAccess-3.0.1-bin\\lib\\commons-logging-1.1.1.jar
 file.reference.commons-logging-1.1.1.jar-1=web\\UCanAccess-3.0.1-bin\\commons-logging-1.1.1.jar
-file.reference.hsqldb.jar=web\\UCanAccess-3.0.1-bin\\lib\\hsqldb.jar
 file.reference.hsqldb.jar-1=web\\UCanAccess-3.0.1-bin\\hsqldb.jar
-file.reference.jackcess-2.1.2.jar=web\\UCanAccess-3.0.1-bin\\lib\\jackcess-2.1.2.jar
 file.reference.jackcess-2.1.2.jar-1=web\\UCanAccess-3.0.1-bin\\jackcess-2.1.2.jar
 file.reference.ucanaccess-3.0.1.jar=web\\UCanAccess-3.0.1-bin\\ucanaccess-3.0.1.jar
 includes=**
@@ -51,15 +47,11 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ucanaccess-3.0.1.jar}:\
-    ${file.reference.commons-lang-2.6.jar}:\
-    ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.hsqldb.jar}:\
-    ${file.reference.jackcess-2.1.2.jar}:\
     ${file.reference.commons-lang-2.6.jar-1}:\
     ${file.reference.commons-logging-1.1.1.jar-1}:\
     ${file.reference.hsqldb.jar-1}:\
-    ${file.reference.jackcess-2.1.2.jar-1}
+    ${file.reference.jackcess-2.1.2.jar-1}:\
+    ${file.reference.ucanaccess-3.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
